--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
     "mobx-react-lite": "^3.1.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.14.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
@@ -53,14 +55,15 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "@typescript-eslint/scope-manager": "^4.12.0",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
-    "@typescript-eslint/scope-manager": "^4.12.0"
+    "mobx-react-devtools": "^6.1.1"
   }
 }
