--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "@types/styled-components": "^5.1.7",
     "axios": "^0.21.1",
     "mobx": "^6.0.4",
-    "mobx-react": "^7.0.5",
+    "mobx-devtools-mst": "^0.9.30",
     "mobx-react-lite": "^3.1.6",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
