--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "mobx-react-lite": "^2.2.2",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.1",
     "react-router-dom": "^5.2.0",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
